--- a/src/bin_client/dune
+++ b/src/bin_client/dune
@@ -20,7 +20,7 @@
             tezos-client-004-Pt24m4xi
             tezos-client-005-PsBabyM1
             tezos-client-006-PsCARTHA
-
+            tezos-client-demo-counter
             tezos-client-alpha-commands.registration
             tezos-client-001-PtCJ7pwo-commands.registration
             tezos-client-002-PsYLVpVv-commands.registration
