--- a/src/bin_node/tezos-node.opam
+++ b/src/bin_node/tezos-node.opam
@@ -21,6 +21,7 @@ depends: [
   "tezos-embedded-protocol-genesis-babylonnet"
   "tezos-embedded-protocol-genesis-carthagenet"
   "tezos-embedded-protocol-demo-noops"
+  "tezos-embedded-protocol-demo-counter"
   "tezos-embedded-protocol-alpha"
   "tezos-embedded-protocol-demo-noops"
   "tezos-embedded-protocol-000-Ps9mPmXa"
