--- a/src/bin_client/test/dune
+++ b/src/bin_client/test/dune
@@ -22,6 +22,25 @@
              %{bin:tezos-admin-client})))
 
 (alias
+ (name runtest_multisig.sh)
+ (deps sandbox.json
+       protocol_parameters.json
+       king_commitment.json
+       queen_commitment.json
+       test_lib.inc.sh
+       (glob_files contracts/opcodes/*)
+       (glob_files contracts/mini_scenarios/*))
+  (locks /tcp-port/18731
+         /tcp-port/19731)
+  (action
+   (run bash %{dep:test_multisig.sh}
+             %{bin:tezos-sandboxed-node.sh}
+             %{bin:tezos-node}
+             %{bin:tezos-init-sandboxed-client.sh}
+             %{bin:tezos-client}
+             %{bin:tezos-admin-client})))
+
+(alias
  (name runtest_contracts.sh)
  (deps sandbox.json
        protocol_parameters.json
