--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -184,11 +184,6 @@ unit:micheline:
   tags:
     - gitlab-org
 
-integration:contracts_opcode.sh:
-  <<: *integration_definition
-  script:
-    - dune build @src/bin_client/runtest_contracts_opcode.sh
-
 integration:contracts_macros.sh:
   <<: *integration_definition
   script:
@@ -276,6 +271,12 @@ integration:contract_baker:
   <<: *integration_definition
   script:
     - pytest tests_python/tests/test_contract_baker.py
+  stage: test
+
+integration:contract_opcodes:
+  <<: *integration_definition
+  script:
+    - pytest tests_python/tests/test_contract_opcodes.py
   stage: test
 
 integration:cors:
