--- a/src/bin_client/test/dune
+++ b/src/bin_client/test/dune
@@ -19,40 +19,6 @@
            %{bin:tezos-admin-client})))
 
 (alias
- (name runtest_multinode.sh)
- (deps sandbox.json
-       protocol_parameters.json
-       test_lib.inc.sh)
- (locks  /tcp-port/18731 /tcp-port/18732 /tcp-port/18733 /tcp-port/18734
-         /tcp-port/18735 /tcp-port/18736 /tcp-port/18737 /tcp-port/18738
-         /tcp-port/19731 /tcp-port/19732 /tcp-port/19733 /tcp-port/19734
-         /tcp-port/19735 /tcp-port/19736 /tcp-port/19737 /tcp-port/19738)
- (action
-  (run bash %{dep:test_multinode.sh}
-            %{bin:tezos-sandboxed-node.sh}
-            %{bin:tezos-node}
-            %{bin:tezos-init-sandboxed-client.sh}
-            %{bin:tezos-client}
-            %{bin:tezos-admin-client})))
-
-(alias
- (name runtest_injection.sh)
- (locks /tcp-port/18731
-        /tcp-port/19731)
- (deps sandbox.json
-       protocol_parameters.json
-       test_lib.inc.sh
-       (glob_files proto_test_injection/*))
- (action
-  (run bash %{dep:test_injection.sh}
-            %{bin:tezos-sandboxed-node.sh}
-            %{bin:tezos-node}
-            %{bin:tezos-init-sandboxed-client.sh}
-            %{bin:tezos-client}
-            %{bin:tezos-admin-client}
-            %{bin:tezos-protocol-compiler})))
-
-(alias
  (name runtest_tls.sh)
  (locks /tcp-port/18731
         /tcp-port/19731)
@@ -85,26 +51,7 @@
             %{bin:tezos-admin-client})))
 
 (alias
- (name runtest_voting.sh)
- (locks /tcp-port/18731
-        /tcp-port/19731)
- (deps sandbox.json
-       protocol_parameters.json
-       test_lib.inc.sh
-       (glob_files proto_test_injection/*))
- (action
-  (run bash %{dep:test_voting.sh}
-            %{bin:tezos-sandboxed-node.sh}
-            %{bin:tezos-node}
-            %{bin:tezos-init-sandboxed-client.sh}
-            %{bin:tezos-client}
-            %{bin:tezos-admin-client})))
-
-(alias
  (name runtest)
  (deps (alias runtest_contracts_macros.sh)
-       (alias runtest_multinode.sh)
-       (alias runtest_injection.sh)
        (alias runtest_tls.sh)
-       (alias runtest_cors.sh)
-       (alias runtest_voting.sh)))
+       (alias runtest_cors.sh)))
