CI: declare babylonnet

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,11 @@ stages:
   except:
     - master
     - alphanet
+    - carthagenet
     - zeronet
     - mainnet
     - alphanet-staging
+    - carthagenet-staging
     - zeronet-staging
     - mainnet-staging
     - zeronet-snapshots
