--- a/data-encoding.opam
+++ b/data-encoding.opam
@@ -1,6 +1,6 @@
 opam-version: "2.0"
-maintainer: "contact@tezos.com"
-authors: [ "Tezos devteam" ]
+maintainer: "contact@nomadic-labs.com"
+authors: [ "Nomadic Labs" ]
 homepage: "https://gitlab.com/nomadic-labs/data-encoding"
 bug-reports: "https://gitlab.com/nomadic-labs/data-encoding/issues"
 dev-repo: "git+https://gitlab.com/nomadic-labs/data-encoding.git"
@@ -20,4 +20,4 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Library of JSON-and-binary encoding combinators"
+synopsis: "Library of JSON and binary encoding combinators"
