--- a/src/dune
+++ b/src/dune
@@ -1,5 +1,5 @@
 (library
  (name data_encoding)
  (public_name data-encoding)
- (libraries lwt ocplib-json-typed ocplib-json-typed-bson zarith ezjsonm)
+ (libraries ocplib-json-typed ocplib-json-typed-bson zarith ezjsonm)
  (flags (:standard)))
