--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -1,12 +1,10 @@
 (library
  (name tezos_crypto)
  (public_name tezos-crypto)
- (flags (:standard -safe-string
-                   -open Tezos_stdlib
+ (flags (:standard -open Tezos_stdlib
                    -open Tezos_data_encoding
                    -open Tezos_error_monad
-                   -open Tezos_rpc
-                   ))
+                   -open Tezos_rpc))
  (libraries tezos-stdlib
             tezos-data-encoding
             tezos-error-monad
