--- a/src/lib_data_encoding/dune
+++ b/src/lib_data_encoding/dune
@@ -6,7 +6,7 @@
             ocplib-json-typed-bson
             zarith
             ezjsonm)
- (flags (:standard)))
+ (flags :standard))
 
 (alias
  (name runtest_lint)
