--- a/src/lib_protocol_environment/sigs/dune
+++ b/src/lib_protocol_environment/sigs/dune
@@ -67,5 +67,5 @@
 (library
  (name tezos_protocol_environment_sigs)
  (public_name tezos-protocol-environment-sigs)
- (flags (:standard -nopervasives -safe-string))
+ (flags (:standard -nopervasives ))
  (modules ("V1")))
