--- a/src/bin_validation/dune
+++ b/src/bin_validation/dune
@@ -9,26 +9,21 @@
             tezos-shell
             tezos-shell-context
             tezos-validation)
- (flags (:standard -w -9+27-30-32-40@8
-                   -safe-string
-                   -open Tezos_base__TzPervasives
+ (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_storage
                    -open Tezos_stdlib_unix
                    -open Tezos_shell
                    -open Tezos_shell_services
                    -open Tezos_validation
                    -open Tezos_protocol_updater
-                   -open Tezos_shell_context
-                   -linkall))
+                   -open Tezos_shell_context))
  (modules Validator))
 
 (executable
  (name main_validator)
  (public_name tezos-validator)
  (libraries tezos_validator)
- (flags (:standard -w -9+27-30-32-40@8
-                   -safe-string
-                   -open Tezos_base__TzPervasives
+ (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_storage
                    -open Tezos_stdlib_unix
                    -open Tezos_shell
