--- a/src/lib_error_monad/test/dune
+++ b/src/lib_error_monad/test/dune
@@ -3,9 +3,7 @@
  (libraries tezos-error-monad
             lwt.unix
             alcotest-lwt)
- (flags (:standard -w -9-32
-                   -safe-string
-                   -open Tezos_error_monad)))
+ (flags (:standard -open Tezos_error_monad)))
 
 (alias
  (name buildtest)
