--- a/src/lib_p2p/tezos-p2p.opam
+++ b/src/lib_p2p/tezos-p2p.opam
@@ -12,6 +12,7 @@ depends: [
   "tezos-stdlib-unix"
   "alcotest-lwt" { with-test }
   "lwt" { < "4.3" }
+  "lwt-watcher" { = "0.1" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
