--- a/src/lib_requester/tezos-requester.opam
+++ b/src/lib_requester/tezos-requester.opam
@@ -11,6 +11,7 @@ depends: [
   "dune" { build & >= "1.7" }
   "tezos-base"
   "tezos-stdlib-unix"
+  "lwt-watcher"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
