Stdlib: remove lwt_canceler and use released version instead

--- a/src/lib_error_monad/dune
+++ b/src/lib_error_monad/dune
@@ -6,6 +6,7 @@
                    ))
  (libraries tezos-stdlib
             tezos-data-encoding
+            lwt-canceler
             lwt))
 
 (alias
