--- a/src/lib_error_monad/tezos-error-monad.opam
+++ b/src/lib_error_monad/tezos-error-monad.opam
@@ -11,6 +11,7 @@ depends: [
   "tezos-stdlib"
   "tezos-data-encoding"
   "lwt"
+  "lwt-canceler" { = "0.2" }
   "alcotest-lwt" { with-test }
 ]
 build: [
