--- a/src/lib_shell/dune
+++ b/src/lib_shell/dune
@@ -2,6 +2,7 @@
  (name tezos_shell)
  (public_name tezos-shell)
  (libraries lwt-watcher
+            lwt-canceler
             tezos-base
             tezos-version
             tezos-storage
