--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -867,7 +867,7 @@ publish:doc:
     - chmod 400 ~/.ssh/id_ed25519
   script:
     - make doc-html
-    - git clone git@gitlab.com:${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAMESPACE}.gitlab.io gitlab.io
+    - git clone --depth 5 git@gitlab.com:${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAMESPACE}.gitlab.io gitlab.io
     - rsync --recursive --links --perms --delete --verbose
         --exclude=.doctrees
         docs/_build/ gitlab.io/public/
@@ -875,8 +875,8 @@ publish:doc:
     - if [ -z "$(git status -s)" ] ; then
         echo "Nothing to commit!" ;
       else
-        git add public/"${CI_COMMIT_REF_NAME}" ;
-        git commit -m "Import doc for ${CI_COMMIT_REF_NAME} (${CI_COMMIT_SHA})" ;
+        git add public ;
+        git commit -m "Import doc of ${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}:${CI_COMMIT_SHA}" ;
         git push origin master ;
       fi
   tags:
