--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -869,7 +869,7 @@ publish:doc:
     - make doc-html
     - git clone --depth 5 git@gitlab.com:${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAMESPACE}.gitlab.io gitlab.io
     - rsync --recursive --links --perms --delete --verbose
-        --exclude=.doctrees
+        --exclude=.doctrees --exclude={{main,alpha,zero}net,master}/index.html
         docs/_build/ gitlab.io/public/
     - cd gitlab.io
     - if [ -z "$(git status -s)" ] ; then
