--- a/src/bin_client/dune
+++ b/src/bin_client/dune
@@ -7,12 +7,31 @@
             tezos-shell-services
             tezos-client-base
             tezos-client-commands
+
             tezos-client-genesis
+            tezos-client-genesis-babylonnet
+            tezos-client-genesis-alphanet
             tezos-client-alpha
+            tezos-client-000-Ps9mPmXa
+            tezos-client-001-PtCJ7pwo
+            tezos-client-002-PsYLVpVv
+            tezos-client-003-PsddFKi3
+            tezos-client-004-Pt24m4xi
+            tezos-client-005-PsBabyM1
+
+            tezos-client-alpha-commands.registration
+            tezos-client-001-PtCJ7pwo-commands.registration
+            tezos-client-002-PsYLVpVv-commands.registration
+            tezos-client-003-PsddFKi3-commands.registration
+            tezos-client-004-Pt24m4xi-commands.registration
+            tezos-client-005-PsBabyM1-commands.registration
+
+            tezos-baking-alpha-commands.registration
+            tezos-baking-004-Pt24m4xi-commands.registration
+            tezos-baking-005-PsBabyM1-commands.registration
+
             tezos-stdlib-unix
             tezos-client-base-unix
-            tezos-client-alpha-commands.registration
-            tezos-baking-alpha-commands.registration
             tezos-signer-backends.unix)
   (flags (:standard -open Tezos_base__TzPervasives
                     -open Tezos_rpc_http_client
