--- a/src/bin_client/tezos-client.opam
+++ b/src/bin_client/tezos-client.opam
@@ -12,10 +12,33 @@ depends: [
   "tezos-base"
   "tezos-client-base"
   "tezos-client-genesis"
+
+  "tezos-client-genesis"
+  "tezos-client-genesis-babylonnet"
+  "tezos-client-genesis-alphanet"
   "tezos-client-alpha"
+  "tezos-client-000-Ps9mPmXa"
+  "tezos-client-001-PtCJ7pwo"
+  "tezos-client-002-PsYLVpVv"
+  "tezos-client-003-PsddFKi3"
+  "tezos-client-004-Pt24m4xi"
+  "tezos-client-005-PsBabyM1"
+
   "tezos-client-alpha-commands"
+  "tezos-client-001-PtCJ7pwo-commands"
+  "tezos-client-002-PsYLVpVv-commands"
+  "tezos-client-003-PsddFKi3-commands"
+  "tezos-client-004-Pt24m4xi-commands"
+  "tezos-client-005-PsBabyM1-commands"
+
   "tezos-baking-alpha"
+  "tezos-baking-004-Pt24m4xi"
+  "tezos-baking-005-PsBabyM1"
+
   "tezos-baking-alpha-commands"
+  "tezos-baking-004-Pt24m4xi-commands"
+  "tezos-baking-005-PsBabyM1-commands"
+
   "tezos-client-base-unix"
   "tezos-signer-backends"
   "tezos-node" { with-test }
