--- a/src/bin_node/tezos-node.opam
+++ b/src/bin_node/tezos-node.opam
@@ -17,8 +17,20 @@ depends: [
   "tezos-protocol-updater"
   "tezos-validator"
   "tezos-embedded-protocol-genesis"
+  "tezos-embedded-protocol-genesis-babylonnet"
+  "tezos-embedded-protocol-genesis-alphanet"
   "tezos-embedded-protocol-demo-noops"
   "tezos-embedded-protocol-alpha"
+  "tezos-embedded-protocol-demo-noops"
+  "tezos-embedded-protocol-000-Ps9mPmXa"
+  "tezos-embedded-protocol-001-PtCJ7pwo"
+  "tezos-embedded-protocol-002-PsYLVpVv"
+  "tezos-embedded-protocol-003-PsddFKi3"
+  "tezos-embedded-protocol-004-Pt24m4xi"
+  "tezos-embedded-protocol-005-PsBABY5H"
+  "tezos-embedded-protocol-005-PsBabyM1"
+  "tezos-mempool-004-Pt24m4xi"
+  "tezos-mempool-005-PsBabyM1"
   "cmdliner"
   "tls"
   "cstruct"
