stdlib_unix/client_base_unix: Use re.str instead of str.
The module re is more jsoo friendly

--- a/src/lib_protocol_compiler/dune
+++ b/src/lib_protocol_compiler/dune
@@ -94,7 +94,7 @@
 
 (executable
  (name replace)
- (libraries tezos-base tezos-base.unix tezos-stdlib-unix str)
+ (libraries tezos-base tezos-base.unix tezos-stdlib-unix re.str)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_stdlib_unix))
  (modules Replace))
