--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,85 +90,101 @@ build:
     - build
   retry: 2
 
-unit:stdlib:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_stdlib/runtest
-
-unit:stdlib_unix:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_stdlib_unix/runtest
-
-unit:data_encoding:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_data_encoding/runtest
-
-unit:storage:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_storage/runtest
+# this section is update using the script scripts/update_unit_test.sh
+##BEGIN_UNITEST##
 
 unit:crypto:
   <<: *test_definition
   script:
     - dune build @src/lib_crypto/runtest
 
-unit:shell:
+unit:data_encoding:
   <<: *test_definition
   script:
-    - dune build @src/lib_shell/runtest
+    - dune build @src/lib_data_encoding/runtest
 
-unit:p2p:io-scheduler:
+unit:error_monad:
   <<: *test_definition
   script:
-    - dune build @src/lib_p2p/runtest_p2p_io_scheduler_ipv4
-
-unit:p2p:socket:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_p2p/runtest_p2p_socket_ipv4
-
-unit:p2p:pool:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_p2p/runtest_p2p_pool_ipv4
-
-unit:proto_alpha:lib_protocol:
-  <<: *test_definition
-  script:
-    - dune build @src/proto_alpha/lib_protocol/runtest
-
-unit:proto_alpha:lib_client:
-  <<: *test_definition
-  script:
-    - dune build @src/proto_alpha/lib_client/test/runtest
-
-unit:p2p:peerset:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_p2p/runtest_p2p_peerset
-
-unit:p2p:ipv6set:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_p2p/runtest_p2p_ipv6set
-
-unit:p2p:banned_peers:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_p2p/runtest_p2p_banned_peers
-
-unit:validation:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_validation/runtest
+    - dune build @src/lib_error_monad/runtest
 
 unit:micheline:
   <<: *test_definition
   script:
     - dune build @src/lib_micheline/runtest
+
+unit:p2p:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_p2p/runtest
+
+unit:protocol_environment:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_protocol_environment/runtest
+
+unit:shell:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_shell/runtest
+
+unit:signer_backends:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_signer_backends/runtest
+
+unit:stdlib:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_stdlib/runtest
+
+unit:storage:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_storage/runtest
+
+unit:ocaml-bip39:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-bip39/runtest
+
+unit:ocaml-blake2:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-blake2/runtest
+
+unit:ocaml-hacl:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-hacl/runtest
+
+unit:ocaml-ledger-wallet:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-ledger-wallet/runtest
+
+unit:ocaml-lmdb:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-lmdb/runtest
+
+unit:ocaml-pbkdf:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-pbkdf/runtest
+
+unit:ocaml-secp256k1:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-secp256k1/runtest
+
+unit:ocaml-uecc:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-uecc/runtest
+
+
+##END_UNITEST##
 
 ############################################################
 ## Stage: run shell integration tests                     ##
@@ -248,6 +264,7 @@ integration:sandboxes:acc-endorsement:
 ## Stage: run python integration tests                    ##
 ############################################################
 
+# this section is update using the script scripts/update_integration_test.sh
 ##BEGIN_INTEGRATION_PYTHON##
 integration:baker_endorser:
   <<: *integration_definition
@@ -410,6 +427,7 @@ documentation:linkcheck:
   tags:
     - gitlab-org
 
+# this section is update using the script scripts/update_opam_test.sh
 ##BEGIN_OPAM##
 opam:00:ocplib-json-typed:
   <<: *opam_definition
