--- a/src/proto_alpha/lib_client_commands/dune
+++ b/src/proto_alpha/lib_client_commands/dune
@@ -9,6 +9,7 @@
             tezos-mockup
             tezos-mockup-registration
             tezos-mockup-commands
+            tezos-client-base-unix
             tezos-client-alpha
             tezos-client-commands
             tezos-rpc
@@ -23,6 +24,7 @@
                    -open Tezos_client_alpha
                    -open Tezos_client_commands
                    -open Tezos_rpc
+                   -open Tezos_client_base_unix
                    -open Tezos_protocol_plugin_alpha)))
 
 (library
