Tests_python: split test_contract_opcodes into onchain and 'run script' tests
For three reasons:
 1. so that run script tests are not marked incremental
 2. since the test_contract_opcodes.py was too long for the linter
 3. cleaner

Moving forward, the test_contract_onchain_opcodes.py can be further
split into suites according to the inter-test dependencies.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -279,6 +279,12 @@ integration:contract_opcodes:
     - pytest tests_python/tests/test_contract_opcodes.py
   stage: test
 
+integration:contract_onchain_opcodes:
+  <<: *integration_definition
+  script:
+    - pytest tests_python/tests/test_contract_onchain_opcodes.py
+  stage: test
+  
 integration:cors:
   <<: *integration_definition
   script:
