--- a/src/lib_shell/dune
+++ b/src/lib_shell/dune
@@ -9,7 +9,8 @@
             tezos-stdlib-unix
             tezos-shell-services
             tezos-protocol-updater
-            tezos-validation)
+            tezos-validation
+            tezos-cache)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_storage
                    -open Tezos_shell_context
@@ -17,7 +18,8 @@
                    -open Tezos_stdlib_unix
                    -open Tezos_shell_services
                    -open Tezos_protocol_updater
-                   -open Tezos_validation)))
+                   -open Tezos_validation
+                   -open Tezos_cache)))
 
 (alias
  (name runtest_lint)
