Tests/Python: test reconstruct feature

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -385,6 +385,12 @@ integration:multinode_snapshot:
     - pytest tests_python/tests/test_multinode_snapshot.py
   stage: test
 
+integration:multinode_storage_reconstruction:
+  <<: *integration_definition
+  script:
+    - pytest tests_python/tests/test_multinode_storage_reconstruction.py
+  stage: test
+
 integration:multisig:
   <<: *integration_definition
   script:
